Fix distorted image thumbnails in Chromium browsers
Fixes https://github.com/WordPress/wporg-showcase-2022/issues/276

--- a/source/wp-content/themes/wporg-showcase-2022/src/site-screenshot/style.scss
+++ b/source/wp-content/themes/wporg-showcase-2022/src/site-screenshot/style.scss
@@ -57,6 +57,7 @@
 
 	img {
 		width: 100%;
+		height: 100%;
 		vertical-align: middle;
 	}
 
